--- a/deploy_wine_model.ipynb
+++ b/deploy_wine_model.ipynb
@@ -95,117 +95,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:sagemaker:Creating training-job with name: sagemaker-scikit-learn-2019-03-18-19-27-59-107\n"
+      "INFO:sagemaker:Creating training-job with name: sagemaker-scikit-learn-2019-03-18-19-57-43-956\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-18 19:27:59 Starting - Starting the training job...\n",
-      "2019-03-18 19:28:01 Starting - Launching requested ML instances.........\n",
-      "2019-03-18 19:29:32 Starting - Preparing the instances for training......\n",
-      "2019-03-18 19:30:50 Downloading - Downloading input data\n",
-      "2019-03-18 19:30:50 Training - Training image download completed. Training in progress..\n",
-      "\u001b[31m2019-03-18 19:30:51,263 sagemaker-containers INFO     Imported framework sagemaker_sklearn_container.training\u001b[0m\n",
-      "\u001b[31m2019-03-18 19:30:51,265 sagemaker-containers INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
-      "\u001b[31m2019-03-18 19:30:51,285 sagemaker_sklearn_container.training INFO     Invoking user training script.\u001b[0m\n",
-      "\u001b[31m2019-03-18 19:30:51,556 sagemaker-containers INFO     Module train_wine_gbt does not provide a setup.py. \u001b[0m\n",
+      "2019-03-18 19:57:44 Starting - Starting the training job...\n",
+      "2019-03-18 19:57:47 Starting - Launching requested ML instances.........\n",
+      "2019-03-18 19:59:44 Starting - Preparing the instances for training......\n",
+      "2019-03-18 20:00:41 Downloading - Downloading input data..\n",
+      "\u001b[31m2019-03-18 20:00:54,775 sagemaker-containers INFO     Imported framework sagemaker_sklearn_container.training\u001b[0m\n",
+      "\u001b[31m2019-03-18 20:00:54,777 sagemaker-containers INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[31m2019-03-18 20:00:54,796 sagemaker_sklearn_container.training INFO     Invoking user training script.\u001b[0m\n",
+      "\u001b[31m2019-03-18 20:00:55,064 sagemaker-containers INFO     Module train_wine_gbt does not provide a setup.py. \u001b[0m\n",
       "\u001b[31mGenerating setup.py\u001b[0m\n",
-      "\u001b[31m2019-03-18 19:30:51,557 sagemaker-containers INFO     Generating setup.cfg\u001b[0m\n",
-      "\u001b[31m2019-03-18 19:30:51,557 sagemaker-containers INFO     Generating MANIFEST.in\u001b[0m\n",
-      "\u001b[31m2019-03-18 19:30:51,557 sagemaker-containers INFO     Installing module with the following command:\u001b[0m\n",
+      "\u001b[31m2019-03-18 20:00:55,064 sagemaker-containers INFO     Generating setup.cfg\u001b[0m\n",
+      "\u001b[31m2019-03-18 20:00:55,064 sagemaker-containers INFO     Generating MANIFEST.in\u001b[0m\n",
+      "\u001b[31m2019-03-18 20:00:55,065 sagemaker-containers INFO     Installing module with the following command:\u001b[0m\n",
       "\u001b[31m/usr/bin/python3 -m pip install -U . \u001b[0m\n",
       "\u001b[31mProcessing /opt/ml/code\u001b[0m\n",
       "\u001b[31mBuilding wheels for collected packages: train-wine-gbt\n",
       "  Running setup.py bdist_wheel for train-wine-gbt: started\n",
       "  Running setup.py bdist_wheel for train-wine-gbt: finished with status 'done'\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-1rgcqtdf/wheels/35/24/16/37574d11bf9bde50616c67372a334f94fa8356bc7164af8ca3\u001b[0m\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-h5x7vin4/wheels/35/24/16/37574d11bf9bde50616c67372a334f94fa8356bc7164af8ca3\u001b[0m\n",
       "\u001b[31mSuccessfully built train-wine-gbt\u001b[0m\n",
       "\u001b[31mInstalling collected packages: train-wine-gbt\u001b[0m\n",
       "\u001b[31mSuccessfully installed train-wine-gbt-1.0.0\u001b[0m\n",
       "\u001b[31mYou are using pip version 18.1, however version 19.0.3 is available.\u001b[0m\n",
       "\u001b[31mYou should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "\u001b[31m2019-03-18 19:30:52,809 sagemaker-containers INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
-      "\u001b[31m2019-03-18 19:30:52,828 sagemaker-containers INFO     Invoking user script\n",
+      "\u001b[31m2019-03-18 20:00:56,390 sagemaker-containers INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[31m2019-03-18 20:00:56,403 sagemaker-containers INFO     Invoking user script\n",
       "\u001b[0m\n",
       "\u001b[31mTraining Env:\n",
       "\u001b[0m\n",
       "\u001b[31m{\n",
+      "    \"input_config_dir\": \"/opt/ml/input/config\",\n",
       "    \"framework_module\": \"sagemaker_sklearn_container.training:main\",\n",
       "    \"input_data_config\": {\n",
       "        \"train\": {\n",
-      "            \"TrainingInputMode\": \"File\",\n",
+      "            \"S3DistributionType\": \"FullyReplicated\",\n",
       "            \"RecordWrapperType\": \"None\",\n",
-      "            \"S3DistributionType\": \"FullyReplicated\"\n",
+      "            \"TrainingInputMode\": \"File\"\n",
       "        }\n",
       "    },\n",
+      "    \"module_dir\": \"s3://sagemaker-us-east-2-207384830943/sagemaker-scikit-learn-2019-03-18-19-57-43-956/source/sourcedir.tar.gz\",\n",
       "    \"additional_framework_parameters\": {},\n",
-      "    \"module_dir\": \"s3://sagemaker-us-east-2-207384830943/sagemaker-scikit-learn-2019-03-18-19-27-59-107/source/sourcedir.tar.gz\",\n",
-      "    \"channel_input_dirs\": {\n",
-      "        \"train\": \"/opt/ml/input/data/train\"\n",
-      "    },\n",
-      "    \"output_dir\": \"/opt/ml/output\",\n",
-      "    \"output_intermediate_dir\": \"/opt/ml/output/intermediate\",\n",
-      "    \"input_config_dir\": \"/opt/ml/input/config\",\n",
       "    \"input_dir\": \"/opt/ml/input\",\n",
-      "    \"model_dir\": \"/opt/ml/model\",\n",
-      "    \"hosts\": [\n",
-      "        \"algo-1\"\n",
-      "    ],\n",
-      "    \"log_level\": 20,\n",
       "    \"hyperparameters\": {},\n",
-      "    \"module_name\": \"train_wine_gbt\",\n",
-      "    \"num_cpus\": 4,\n",
-      "    \"num_gpus\": 0,\n",
+      "    \"user_entry_point\": \"train_wine_gbt.py\",\n",
       "    \"network_interface_name\": \"ethwe\",\n",
-      "    \"job_name\": \"sagemaker-scikit-learn-2019-03-18-19-27-59-107\",\n",
-      "    \"output_data_dir\": \"/opt/ml/output/data\",\n",
+      "    \"current_host\": \"algo-1\",\n",
+      "    \"module_name\": \"train_wine_gbt\",\n",
       "    \"resource_config\": {\n",
-      "        \"network_interface_name\": \"ethwe\",\n",
       "        \"current_host\": \"algo-1\",\n",
       "        \"hosts\": [\n",
       "            \"algo-1\"\n",
-      "        ]\n",
+      "        ],\n",
+      "        \"network_interface_name\": \"ethwe\"\n",
       "    },\n",
-      "    \"current_host\": \"algo-1\",\n",
-      "    \"user_entry_point\": \"train_wine_gbt.py\"\u001b[0m\n",
+      "    \"channel_input_dirs\": {\n",
+      "        \"train\": \"/opt/ml/input/data/train\"\n",
+      "    },\n",
+      "    \"job_name\": \"sagemaker-scikit-learn-2019-03-18-19-57-43-956\",\n",
+      "    \"log_level\": 20,\n",
+      "    \"output_intermediate_dir\": \"/opt/ml/output/intermediate\",\n",
+      "    \"output_data_dir\": \"/opt/ml/output/data\",\n",
+      "    \"num_cpus\": 4,\n",
+      "    \"num_gpus\": 0,\n",
+      "    \"hosts\": [\n",
+      "        \"algo-1\"\n",
+      "    ],\n",
+      "    \"model_dir\": \"/opt/ml/model\",\n",
+      "    \"output_dir\": \"/opt/ml/output\"\u001b[0m\n",
       "\u001b[31m}\n",
       "\u001b[0m\n",
       "\u001b[31mEnvironment variables:\n",
       "\u001b[0m\n",
-      "\u001b[31mSM_OUTPUT_DIR=/opt/ml/output\u001b[0m\n",
-      "\u001b[31mSM_RESOURCE_CONFIG={\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"ethwe\"}\u001b[0m\n",
-      "\u001b[31mSM_LOG_LEVEL=20\u001b[0m\n",
-      "\u001b[31mSM_NUM_GPUS=0\u001b[0m\n",
       "\u001b[31mSM_NETWORK_INTERFACE_NAME=ethwe\u001b[0m\n",
-      "\u001b[31mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_sklearn_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"job_name\":\"sagemaker-scikit-learn-2019-03-18-19-27-59-107\",\"log_level\":20,\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-2-207384830943/sagemaker-scikit-learn-2019-03-18-19-27-59-107/source/sourcedir.tar.gz\",\"module_name\":\"train_wine_gbt\",\"network_interface_name\":\"ethwe\",\"num_cpus\":4,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"ethwe\"},\"user_entry_point\":\"train_wine_gbt.py\"}\u001b[0m\n",
-      "\u001b[31mPYTHONPATH=/usr/local/bin:/usr/lib/python35.zip:/usr/lib/python3.5:/usr/lib/python3.5/plat-x86_64-linux-gnu:/usr/lib/python3.5/lib-dynload:/usr/local/lib/python3.5/dist-packages:/usr/lib/python3/dist-packages\u001b[0m\n",
-      "\u001b[31mSM_FRAMEWORK_MODULE=sagemaker_sklearn_container.training:main\u001b[0m\n",
-      "\u001b[31mSM_HOSTS=[\"algo-1\"]\u001b[0m\n",
-      "\u001b[31mSM_OUTPUT_DATA_DIR=/opt/ml/output/data\u001b[0m\n",
+      "\u001b[31mSM_NUM_CPUS=4\u001b[0m\n",
       "\u001b[31mSM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\u001b[0m\n",
-      "\u001b[31mSM_CURRENT_HOST=algo-1\u001b[0m\n",
+      "\u001b[31mSM_USER_ARGS=[]\u001b[0m\n",
+      "\u001b[31mSM_NUM_GPUS=0\u001b[0m\n",
+      "\u001b[31mSM_MODULE_NAME=train_wine_gbt\u001b[0m\n",
+      "\u001b[31mSM_OUTPUT_DIR=/opt/ml/output\u001b[0m\n",
+      "\u001b[31mSM_CHANNEL_TRAIN=/opt/ml/input/data/train\u001b[0m\n",
+      "\u001b[31mSM_INPUT_DATA_CONFIG={\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}}\u001b[0m\n",
+      "\u001b[31mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_sklearn_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"job_name\":\"sagemaker-scikit-learn-2019-03-18-19-57-43-956\",\"log_level\":20,\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-2-207384830943/sagemaker-scikit-learn-2019-03-18-19-57-43-956/source/sourcedir.tar.gz\",\"module_name\":\"train_wine_gbt\",\"network_interface_name\":\"ethwe\",\"num_cpus\":4,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"ethwe\"},\"user_entry_point\":\"train_wine_gbt.py\"}\u001b[0m\n",
       "\u001b[31mSM_HPS={}\u001b[0m\n",
       "\u001b[31mSM_FRAMEWORK_PARAMS={}\u001b[0m\n",
-      "\u001b[31mSM_INPUT_DATA_CONFIG={\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}}\u001b[0m\n",
-      "\u001b[31mSM_MODULE_NAME=train_wine_gbt\u001b[0m\n",
-      "\u001b[31mSM_CHANNEL_TRAIN=/opt/ml/input/data/train\u001b[0m\n",
-      "\u001b[31mSM_CHANNELS=[\"train\"]\u001b[0m\n",
-      "\u001b[31mSM_INPUT_CONFIG_DIR=/opt/ml/input/config\u001b[0m\n",
-      "\u001b[31mSM_USER_ENTRY_POINT=train_wine_gbt.py\u001b[0m\n",
-      "\u001b[31mSM_MODULE_DIR=s3://sagemaker-us-east-2-207384830943/sagemaker-scikit-learn-2019-03-18-19-27-59-107/source/sourcedir.tar.gz\u001b[0m\n",
-      "\u001b[31mSM_USER_ARGS=[]\u001b[0m\n",
-      "\u001b[31mSM_INPUT_DIR=/opt/ml/input\u001b[0m\n",
       "\u001b[31mSM_MODEL_DIR=/opt/ml/model\u001b[0m\n",
-      "\u001b[31mSM_NUM_CPUS=4\n",
+      "\u001b[31mSM_LOG_LEVEL=20\u001b[0m\n",
+      "\u001b[31mSM_MODULE_DIR=s3://sagemaker-us-east-2-207384830943/sagemaker-scikit-learn-2019-03-18-19-57-43-956/source/sourcedir.tar.gz\u001b[0m\n",
+      "\u001b[31mSM_INPUT_CONFIG_DIR=/opt/ml/input/config\u001b[0m\n",
+      "\u001b[31mSM_OUTPUT_DATA_DIR=/opt/ml/output/data\u001b[0m\n",
+      "\u001b[31mSM_CURRENT_HOST=algo-1\u001b[0m\n",
+      "\u001b[31mSM_INPUT_DIR=/opt/ml/input\u001b[0m\n",
+      "\u001b[31mSM_RESOURCE_CONFIG={\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"ethwe\"}\u001b[0m\n",
+      "\u001b[31mSM_FRAMEWORK_MODULE=sagemaker_sklearn_container.training:main\u001b[0m\n",
+      "\u001b[31mSM_HOSTS=[\"algo-1\"]\u001b[0m\n",
+      "\u001b[31mSM_USER_ENTRY_POINT=train_wine_gbt.py\u001b[0m\n",
+      "\u001b[31mPYTHONPATH=/usr/local/bin:/usr/lib/python35.zip:/usr/lib/python3.5:/usr/lib/python3.5/plat-x86_64-linux-gnu:/usr/lib/python3.5/lib-dynload:/usr/local/lib/python3.5/dist-packages:/usr/lib/python3/dist-packages\u001b[0m\n",
+      "\u001b[31mSM_CHANNELS=[\"train\"]\n",
       "\u001b[0m\n",
       "\u001b[31mInvoking script with the following command:\n",
       "\u001b[0m\n",
@@ -231,7 +230,8 @@
       "\u001b[31mRequirement already satisfied, skipping upgrade: scipy in /usr/local/lib/python3.5/dist-packages (from xgboost) (1.1.0)\u001b[0m\n",
       "\u001b[31mRequirement already satisfied, skipping upgrade: numpy in /usr/local/lib/python3.5/dist-packages (from xgboost) (1.15.4)\u001b[0m\n",
       "\u001b[31mInstalling collected packages: xgboost\u001b[0m\n",
-      "\u001b[31mSuccessfully installed xgboost-0.82\u001b[0m\n",
+      "\n",
+      "2019-03-18 20:00:53 Training - Training image download completed. Training in progress.\u001b[31mSuccessfully installed xgboost-0.82\u001b[0m\n",
       "\u001b[31mYou are using pip version 18.1, however version 19.0.3 is available.\u001b[0m\n",
       "\u001b[31mYou should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "\u001b[31mCould not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\u001b[0m\n",
@@ -252,23 +252,23 @@
       "  if getattr(data, 'base', None) is not None and \\\u001b[0m\n",
       "\u001b[31m/usr/local/lib/python3.5/dist-packages/xgboost/core.py:588: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
       "  data.base is not None and isinstance(data, np.ndarray) \\\u001b[0m\n",
-      "\u001b[31m[0]#011train-mae:2.05883\u001b[0m\n",
+      "\u001b[31m[0]#011train-mae:2.05885\u001b[0m\n",
       "\u001b[31mWill train until train-mae hasn't improved in 10 rounds.\u001b[0m\n",
-      "\u001b[31m[1]#011train-mae:1.97019\u001b[0m\n",
-      "\u001b[31m[2]#011train-mae:1.93414\u001b[0m\n",
-      "\u001b[31m[3]#011train-mae:1.91314\u001b[0m\n",
-      "\u001b[31m[4]#011train-mae:1.89897\u001b[0m\n",
-      "\u001b[31m[5]#011train-mae:1.88262\u001b[0m\n",
-      "\u001b[31m[6]#011train-mae:1.86775\u001b[0m\n",
-      "\u001b[31m[7]#011train-mae:1.85992\u001b[0m\n",
-      "\u001b[31m[8]#011train-mae:1.85213\u001b[0m\n",
-      "\n",
-      "2019-03-18 19:31:56 Uploading - Uploading generated training model\n",
-      "2019-03-18 19:31:56 Completed - Training job completed\n",
-      "\u001b[31m[9]#011train-mae:1.84454\u001b[0m\n",
+      "\u001b[31m[1]#011train-mae:1.97463\u001b[0m\n",
+      "\u001b[31m[2]#011train-mae:1.93987\u001b[0m\n",
+      "\u001b[31m[3]#011train-mae:1.92237\u001b[0m\n",
+      "\u001b[31m[4]#011train-mae:1.89606\u001b[0m\n",
+      "\u001b[31m[5]#011train-mae:1.87582\u001b[0m\n",
+      "\u001b[31m[6]#011train-mae:1.86116\u001b[0m\n",
+      "\u001b[31m[7]#011train-mae:1.84608\u001b[0m\n",
+      "\u001b[31m[8]#011train-mae:1.8386\u001b[0m\n",
+      "\u001b[31m[9]#011train-mae:1.83225\u001b[0m\n",
       "\u001b[31mModel trained and saved!\u001b[0m\n",
-      "\u001b[31m2019-03-18 19:31:45,708 sagemaker-containers INFO     Reporting training SUCCESS\u001b[0m\n",
-      "Billable seconds: 78\n"
+      "\u001b[31m2019-03-18 20:01:47,902 sagemaker-containers INFO     Reporting training SUCCESS\u001b[0m\n",
+      "\n",
+      "2019-03-18 20:01:58 Uploading - Uploading generated training model\n",
+      "2019-03-18 20:01:58 Completed - Training job completed\n",
+      "Billable seconds: 77\n"
      ]
     }
    ],
@@ -292,15 +292,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:sagemaker:Creating model with name: sagemaker-scikit-learn-2019-03-18-19-27-59-107\n",
-      "INFO:sagemaker:Creating endpoint with name sagemaker-scikit-learn-2019-03-18-19-27-59-107\n"
+      "INFO:sagemaker:Creating model with name: sagemaker-scikit-learn-2019-03-18-19-57-43-956\n",
+      "INFO:sagemaker:Creating endpoint with name sagemaker-scikit-learn-2019-03-18-19-57-43-956\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------------"
+      "---------------------"
      ]
     }
    ],
@@ -330,42 +330,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import xgboost as xgb\n",
-    "\n",
-    "#format payload as a dataframe\n",
-    "x = pd.DataFrame(feature_payload, index=[0])\n",
-    "#convert it to xgboost data object\n",
-    "x = xgb.DMatrix(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictor.predict(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from sagemaker.predictor import json_serializer, csv_serializer, json_deserializer, RealTimePredictor\n",
     "from sagemaker.content_types import CONTENT_TYPE_CSV, CONTENT_TYPE_JSON\n",
-    "payload = 'M, 0.44, 0.365, 0.125, 0.516, 0.2155, 0.114, 0.155'\n",
-    "actual_rings = 10\n",
+    "\n",
     "predictor = RealTimePredictor(\n",
-    "    endpoint=endpoint_name,\n",
+    "    endpoint=\"sagemaker-scikit-learn-2019-03-18-19-27-59-107\",\n",
     "    sagemaker_session=sagemaker_session,\n",
     "    serializer=csv_serializer,\n",
     "    content_type=CONTENT_TYPE_CSV,\n",
     "    accept=CONTENT_TYPE_JSON)\n",
-    "​\n",
-    "print(predictor.predict(payload))"
+    "\n",
+    "print(predictor.predict(feature_payload))"
    ]
   },
   {
